# cmdexpand

./: Cargo.toml  README.md
src/: expander.rs  lib.rs  parser.rs
