[package]
name = "cmdexpand"
version = "0.2.0"
edition = "2021"
description = "This crate performs batch-like expansions"
license-file = "LICENSE"
repository = "https://github.com/ndtoan96/cmdexpand"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7"
thiserror = "^1"
